# cor-tests

./: CMakeLists.txt  README.md
Python/: parser_bin.py
src/: CMakeLists.txt  DataVectors.cpp  DataVectors.hpp  SpectrumLoader.cpp  ThroughputFunc.hpp  main.cpp  utilities.hpp
src/Asmp/: CMakeLists.txt  SpectrumLoader.cpp  SpectrumLoader.hpp  ThroughputFunc.cpp  structs.hpp  utilities.cpp
src/InfilGenerator/: CMakeLists.txt  OutfilData.cpp  OutfilData.hpp  Timestamp.cpp  Timestamp.hpp  date.h  geo_to_mag.cpp  geo_to_mag.hpp  infilGenerator.cpp  infilGenerator.hpp  main.cpp
tst/: CMakeLists.txt  DataVectors-test.cpp  Formula-test.cpp  SpectrumLoader_bin1.cpp  SpectrumLoader_test.cpp
tst/Asmp/: CMakeLists.txt  DataVectors-test.cpp  Formula-test.cpp  SpectrumLoader_test.cpp
tst/InfilGenerator/: 2step.cpp  CMakeLists.txt  Geo_to_mag.cpp  IGRF_1d_true.cpp  InfilGenerator_test.cpp  Infil_test.cpp  Mag_T05.cpp  Mag_T96.cpp  OutfilData.cpp  OutfilData_test.cpp  T05_1d_true.cpp  T96_1d_true.cpp  Timestamp_test.cpp  Trajectory_IGRF.cpp  Trajectory_T05.cpp  Trajectory_T96.cpp  Write_test.cpp
